--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -23,11 +23,13 @@ classifiers=[
     '{{ license_classifiers[cookiecutter.open_source_license] }}',
 {%- endif %}
     'Natural Language :: English',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.6',
-    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3 :: Only',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13'
 ]
 packages = [
     { include = "{{ cookiecutter.pkg_name }}" },
@@ -35,48 +37,43 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4.0"
+python = ">=3.8.16,<4.0"
 {%- if cookiecutter.command_line_interface|lower == 'click' %}
-click = "8.0.1"
+click = "8.1.7"
 {%- endif %}
 
-black  = { version = "^21.5b2", optional = true}
-isort  = { version = "^5.8.0", optional = true}
-flake8  = { version = "^3.9.2", optional = true}
-flake8-docstrings = { version = "^1.6.0", optional = true }
+ruff  = { version = "^0.5.2", optional = true}
 {%- if cookiecutter.use_mypy == 'y' %}
-mypy = {version = "^0.900", optional = true}
+mypy = {version = "^1.10.0", optional = true}
 {%- endif %}
-pytest  = { version = "^6.2.4", optional = true}
-pytest-cov  = { version = "^2.12.0", optional = true}
-tox  = { version = "^3.20.1", optional = true}
-virtualenv  = { version = "^20.2.2", optional = true}
-pip  = { version = "^20.3.1", optional = true}
-mkdocs  = { version = "^1.1.2", optional = true}
-mkdocs-include-markdown-plugin  = { version = "^1.0.0", optional = true}
-mkdocs-material  = { version = "^6.1.7", optional = true}
-mkdocstrings  = { version = "^0.15.2", optional = true}
-mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
-twine  = { version = "^3.3.0", optional = true}
-mkdocs-autorefs = {version = "^0.2.1", optional = true}
-pre-commit = {version = "^2.12.0", optional = true}
-toml = {version = "^0.10.2", optional = true}
-bump2version = {version = "^1.0.1", optional = true}
+pytest  = { version = "^8.3.1", optional = true}
+pytest-cov  = { version = "^5.0.0", optional = true}
+tox  = { version = "^4.16.0", optional = true}
+virtualenv  = { version = "^20.26.3", optional = true}
+uv  = { version = "^0.2.27", optional = true}
+pip  = { version = "^24.1.2", optional = true}
+mkdocs  = { version = "^1.6.0", optional = true}
+mkdocs-include-markdown-plugin  = { version = "^6.2.1", optional = true}
+mkdocs-material  = { version = "^9.5.29", optional = true}
+mkdocstrings  = { version = "^0.25.1", optional = true}
+mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
+twine  = { version = "^5.1.1", optional = true}
+mkdocs-autorefs = {version = "^1.0.1", optional = true}
+pre-commit = {version = "^3.7.1", optional = true}
+tomlkit = {version = "^0.13.0", optional = true}
+bump-my-version = {version = "^0.24.3", optional = true}
 
 [tool.poetry.extras]
 test = [
     "pytest",
-    "black",
-    "isort",
+    "ruff",
     {%- if cookiecutter.use_mypy == 'y' %}
     "mypy",
     {%- endif %}
-    "flake8",
-    "flake8-docstrings",
     "pytest-cov"
     ]
 
-dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]
+dev = ["tox", "pre-commit", "virtualenv", "pip", "uv", "twine", "tomlkit", "bump-my-version"]
 
 doc = [
     "mkdocs",
@@ -95,7 +92,7 @@ doc = [
 [tool.black]
 line-length = 120
 skip-string-normalization = true
-target-version = ['py36', 'py37', 'py38']
+target-version = ['py38', 'py39', 'py310']
 include = '\.pyi?$'
 exclude = '''
 /(
