--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -1,4 +1,6 @@
 {%- set license_classifiers = {
+    'BlueOak-1.0.0': 'License :: OSI Approved :: Blue Oak Model License 1.0.0',
+    'BSD-2-Clause-Patent': 'BSD-2-Clause Plus Patent License',
     'MIT': 'License :: OSI Approved :: MIT License',
     'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
     'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
