--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -38,6 +38,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
+ptpython = ">=3.0.25,<3.1"
 {%- if cookiecutter.command_line_interface|lower == 'click' %}
 click = "8.1.7"
 {%- endif %}
