--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -60,7 +60,9 @@ mkdocstrings  = { version = "^0.25.1", optional = true}
 mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
 twine  = { version = "^5.1.1", optional = true}
 mkdocs-autorefs = {version = "^1.0.1", optional = true}
+{%- if cookiecutter.install_precommit_hooks == 'y' %}
 pre-commit = {version = "^3.7.1", optional = true}
+{%- endif %}
 tomlkit = {version = "^0.13.0", optional = true}
 bump-my-version = {version = "^0.24.3", optional = true}
 
@@ -75,7 +77,20 @@ test = [
     "pytest-cov"
     ]
 
-dev = ["tox", "pre-commit", "virtualenv", "pip", "uv", "twine", "tomlkit", "bump-my-version"]
+dev = [
+    "basedpyright",
+    "ruff",
+    "tox",
+    {%- if cookiecutter.install_precommit_hooks == 'y' %}
+    "pre-commit",
+    {%- endif %}
+    "virtualenv",
+    "pip",
+    "uv",
+    "twine",
+    "tomlkit",
+    "bump-my-version"
+    ]
 
 doc = [
     "mkdocs",
@@ -89,7 +104,7 @@ doc = [
 {% if cookiecutter.command_line_interface|lower == 'click' -%}
 [tool.poetry.scripts]
 {{ cookiecutter.project_slug }} = '{{ cookiecutter.pkg_name }}.cli:main'
-{% endif -%}
+{% endif %}
 
 [tool.basedpyright]
 ignore = ["*"]
